--- a/Groceries/Base.lproj/Main.storyboard
+++ b/Groceries/Base.lproj/Main.storyboard
@@ -22,11 +22,54 @@
                     <connections>
                         <segue destination="gzl-8h-5wd" kind="relationship" relationship="viewControllers" id="ZOO-8s-f6L"/>
                         <segue destination="5Ht-OJ-16X" kind="relationship" relationship="viewControllers" id="yZu-lR-rKh"/>
+                        <segue destination="xno-3G-HrL" kind="relationship" relationship="viewControllers" id="ei1-IH-FOq"/>
+                        <segue destination="LMy-Me-bbF" kind="relationship" relationship="viewControllers" id="vdZ-eN-rJN"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-92" y="272"/>
+            <point key="canvasLocation" x="-294" y="1329"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xx1-qX-Gz0">
+            <objects>
+                <viewController id="m0t-yM-qLV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3WD-qE-c6q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a7d-Pd-Q3H">
+                                <rect key="frame" x="166" y="323" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="jle-oI-O0t"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lay-YI-o4l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1433" y="-452"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="M7h-Q0-Gra">
+            <objects>
+                <navigationController id="LMy-Me-bbF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="O2r-7M-YBh"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mAH-v2-CKc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="m0t-yM-qLV" kind="show" id="fEk-hN-aOi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ckN-ez-4my" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718" y="-452"/>
         </scene>
         <!--Item-->
         <scene sceneID="APj-yU-Mio">
@@ -101,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FhE-ee-Ux9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1434" y="271"/>
+            <point key="canvasLocation" x="1481" y="270"/>
         </scene>
         <!--New Food Item-->
         <scene sceneID="Zzg-ZN-wc1">
@@ -138,12 +181,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZvH-ch-WD0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2162" y="271"/>
+            <point key="canvasLocation" x="2297" y="270"/>
         </scene>
         <!--Item-->
         <scene sceneID="knF-50-KeD">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WzL-od-PBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="5Ht-OJ-16X" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="cBS-4h-dtX"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="jA6-pw-lAf">
@@ -154,13 +196,13 @@
                         <segue destination="jai-gN-iFI" kind="relationship" relationship="rootViewController" id="vrQ-SZ-4aN"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WzL-od-PBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="718" y="1047"/>
         </scene>
         <!--Fridge-->
         <scene sceneID="TEz-in-qQb">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cBW-41-qbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="jai-gN-iFI" customClass="Food2ViewController" customModule="Groceries" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dRv-6M-WgE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -209,16 +251,16 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="tableView2" destination="Oky-SE-GHB" id="7Xj-S2-D0i"/>
+                        <outlet property="tableView" destination="Oky-SE-GHB" id="LUH-F0-HB0"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cBW-41-qbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1481" y="1047"/>
         </scene>
         <!--New Food Item-->
         <scene sceneID="a3L-fN-BiS">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZYA-zG-VDK" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="NTJ-dB-gan" customClass="Add2ViewController" customModule="Groceries" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Nr-j5-eh2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -237,7 +279,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="+ Add"/>
                                 <connections>
-                                    <action selector="itemAdd2:" destination="NTJ-dB-gan" eventType="touchUpInside" id="Qrg-Wk-W5s"/>
+                                    <action selector="itemAdd2:" destination="NTJ-dB-gan" eventType="touchUpInside" id="2Mw-qX-gdb"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -249,8 +291,121 @@
                         <outlet property="foodName2" destination="Tsn-Wh-5iA" id="y9Q-Qk-Tph"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZYA-zG-VDK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2298" y="1047"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="sG4-5g-CZH">
+            <objects>
+                <navigationController id="xno-3G-HrL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="dEx-Xg-r1W"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="qjE-a2-Lmw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kHT-G9-jUJ" kind="relationship" relationship="rootViewController" id="onl-N6-OG9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sAU-Oy-2LN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="718" y="1757"/>
+        </scene>
+        <!--Freezer-->
+        <scene sceneID="WWy-Fx-LV6">
+            <objects>
+                <viewController id="kHT-G9-jUJ" customClass="Food3ViewController" customModule="Groceries" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b1b-Hb-8km">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ejc-TV-vci">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationWidth="0.0" textLabel="LcQ-Cj-0g4" detailTextLabel="46E-8f-JoC" style="IBUITableViewCellStyleValue1" id="2ay-9r-dNd">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2ay-9r-dNd" id="IuA-Zv-0hK">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LcQ-Cj-0g4">
+                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="46E-8f-JoC">
+                                                    <rect key="frame" x="296" y="12" width="44" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="NLp-an-DhA"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Freezer" largeTitleDisplayMode="always" id="Hlt-rs-ngR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fVN-ew-38n">
+                            <connections>
+                                <segue destination="hBf-um-pcA" kind="show" id="KtZ-9o-n7m"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Ejc-TV-vci" id="xWP-Gu-Zum"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Hd-mw-SXL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1481" y="1756"/>
+        </scene>
+        <!--New Food Item-->
+        <scene sceneID="rQd-gT-r6S">
+            <objects>
+                <viewController id="hBf-um-pcA" customClass="Add3ViewController" customModule="Groceries" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZwX-1n-qam">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Food Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s0L-Fh-dab">
+                                <rect key="frame" x="92" y="136" width="190" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3WN-BG-qri">
+                                <rect key="frame" x="161" y="174" width="53" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="+ Add"/>
+                                <connections>
+                                    <action selector="itemAdd3:" destination="hBf-um-pcA" eventType="touchUpInside" id="kyx-Bm-CEB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.8994140625" green="0.9399553571" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="f9i-jl-eOu"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="New Food Item" largeTitleDisplayMode="never" id="hK5-ck-JyB"/>
+                    <connections>
+                        <outlet property="foodName3" destination="s0L-Fh-dab" id="ffb-ao-PHB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z1r-fn-sdh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2297" y="1756"/>
         </scene>
     </scenes>
 </document>
